Reduce usage of guava in the server module.